 - Multiscrape support
 - Ban peers that send too much bad data
 - Only report downloaded, verified good pieces in tracker `download' field
 - OS X:
   + Per-torrent action menu
   + Redesigned message log
   + Inspector can be resized vertically in Peers and Files tabs
   + Optimizations to decrease memory usage
   + Various smaller interface additions and improvements

0.82 (2007/09/09)
 - Fixed bug that could limit transfer speeds
 - Fixed bug that corrupted torrents > 4 GB
 - Fixed bug that could allow bad peers to send too many pieces
 - For peers supporting both Azureus's and LibTorrent's extensions, allow negotiation to decide which to use
 - Other minor fixes

0.81 (2007/08/22)
 - Fix 0.80 assertion crashes
 - Fix a bug that miscounted how many peers Transmission wants connected
 - Correct incorrect error messages
 - Memory leaks fixed
 - OS X:
   + Multiple fixes to creating torrents and adding new torrents
   + Updated Russian and Spanish translations
 - GTK:
   + Updated Dutch, Portuguese, French, and Slovakian translations
 - CLI:
   + Better support for cli-driven torrent creation
   + Fix a bug that misparsed command-line arguments

0.80 (2007/08/07)
 - Ability to selectively download and prioritize files
 - Torrent file creation
 - Speed and CPU load improvements
 - Fix to UPnP
 - Rechecking torrents is now done one-at-a-time to avoid heavy disk load
 - Better rechecking of torrents that have many files
 - Many miscellaneous improvements and bugfixes
 - Partial licensing change -- see the LICENSE file for details
 - OS X:
   + Overlay when dragging torrent files, URLs, and data files onto window
   + Ability to set an amount of time to consider a transfer stalled
   + More progress bar colors
   + Various smaller interface improvements
   + Italian, Korean, and Russian translations
 - GTK:
   + Added Torrent Inspector dialog
   + Added Update Tracker button
   + Various smaller interface improvements

0.72 (2007/04/30)